# octetos-image

./: .gitignore  Makefile.am  configure.ac
src/: BMP.cc  BMP.hh  Makefile.am  develop.cc
tests/: Makefile.am  v0.cc
